fix: 组件概览中 Jumper 的链接 (#834)
* fix: 组件概览中 Jumper 的链接

* style: 修复 ImageViewer 连续点击工具栏时，会选中工具栏文字的问题

--- a/style/web/components/image-viewer/_index.less
+++ b/style/web/components/image-viewer/_index.less
@@ -363,6 +363,7 @@
   align-items: center;
   justify-content: center;
   color: @text-color-primary;
+  user-select: none;
 
   .@{prefix}-image-viewer__utils--content {
     display: inline-flex;
